# pelouse-app

./: .gitignore  Cargo.toml  PelouseData.db  README.md  build.rs  meson.build  org.gnome.pelouse_app_rust.json
content/: org.gtk_rs.content.gresource.xml
content/ui/: Pelouse_app.cmb  page_consult_client.ui  page_log.ui  page_newclient.ui  window.ui
data/: meson.build  org.gnome.pelouse_app_rust.desktop.in  org.gnome.pelouse_app_rust.gschema.xml  org.gnome.pelouse_app_rust.metainfo.xml.in  org.gnome.pelouse_app_rust.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  main.rs  meson.build  pelouse-app-rust.gresource.xml  sqlite_functions.rs  window.rs
src/page_consult_client/: imp.rs  mod.rs
src/page_log/: imp.rs  mod.rs
src/page_new_client/: imp.rs  mod.rs
src/task_job/: imp.rs  mod.rs
src/task_object/: imp.rs  mod.rs
src/ui/: Pelouse_app.cmb  jobs_task  jobs_task.ui  page_consult_client.ui  page_log.ui  page_newclient.ui  window.ui
src/window/: imp.rs  mod.rs
